--- a/rndis/src/main/res/values/strings.xml
+++ b/rndis/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">RNDIS Configuration</string>
     <string name="usageTest">The following values are used as the RNDIS network interface values.</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_help">Help</string>
     <string name="ip_hint">10.0.0.1</string>
     <string name="mask_hint">255.0.0.0</string>
 </resources>
